Fixed hero top margin on mobile for internal pages

--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,7 @@ nav li.active a {
   nav {
     padding: 20px;
   }
-  .hero-home {
+  .hero {
     margin-top: 115px;
   }
   .preview {
